[package]
name = "KeyValueEngine"
version = "0.1.0"
edition = "2021"
authors = ["Andjela Ristic"]

[dependencies]
hash_with_seed = { path = "help_elements/hash_with_seed" }
bloom_filter={path = "probabilistic_structures/bloom_filter" }
cache={path = "structures/cache"}

[workspace]
members = ["help_elements/entry_element","probabilistic_structures/count_min_sketch", "probabilistic_structures/hyper_log_log", "probabilistic_structures/sim_hash", "probabilistic_structures/skip_list","structures/*", "tree_structures/b_tree", "tree_structures/merkle_tree"]
