[package]
name = "startup_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

entry_element={path="../../help_elements/entry_element"}
hash_with_seed={path="../../help_elements/hash_with_seed"}

bloom_filter= {path="../../probabilistic_structures/bloom_filter"}
count_min_sketch= {path="../../probabilistic_structures/count_min_sketch"}
hyper_log_log= {path="../../probabilistic_structures/hyper_log_log"}
sim_hash= {path="../../probabilistic_structures/sim_hash"}
skip_list= {path="../../probabilistic_structures/skip_list"}

cache={path="../../structures/cache"}
memtable={path="../../structures/memtable"}
sstable={path="../../structures/sstable"}
token_bucket={path="../../structures/token_bucket"}
write_ahead_log={path="../../structures/write_ahead_log"}

b_tree={path="../../tree_structures/b_tree"}
merkle_tree={path="../../tree_structures/merkle_tree"}
clap = { version = "4.5.17", features = ["derive"] }